src/components/RadioButtons.css
.radioBar, .radioPanel {
  display: flex;
  position: absolute;
  transform-origin: 0 0;
  box-sizing: border-box;
}

.radioPanel {
  background-color: #e0e0dc;
  border-radius: 6px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  box-shadow: inset 1px 1px 2px 0 rgba(0,0,0,0.15);
}

.buttonActive,
.buttonInactive,
.panelButtonActive,
.panelButtonInactive {
  border-radius: 3px;
  min-width: 20px;
  box-sizing: border-box;
  font-size: 12px;
  text-align: center;
  user-select: none;
}

.panelButtonActive,
.panelButtonInactive {
  padding: 5px 8px 4px 8px;
  height: 22px;
  margin: 2px;
  overflow: hidden;
  text-wrap: none;
  text-overflow: ellipsis;
}

.buttonActive,
.buttonInactive {
  position: relative;
  height: 20px;
  padding: 3px 8px 2px 8px;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.buttonInactive,
.panelButtonInactive {
  color: #696966;
  cursor: pointer;
}

.buttonInactive:hover,
.panelButtonInactive:hover {
  background-color: #d1d1d1
}

.buttonInactive {
  box-shadow: inset 1px 1px 2px 0 rgba(0,0,0,0.15);
  background-color: #e0e0dc;
}

.buttonActive,
.panelButtonActive {
  background-color: #73736f;
  color: #EEEEEA;
  box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.15);
}

.label, .panelLabel {
  height: 20px;
  margin-bottom: 2px;
  font-size: 14px;
  color: #73736f;
}
.label {
  text-align: right;
  padding: 2px 8px 0 2px;
}
.panelLabel {
  padding: 5px 8px 0 8px;
}

